docs: update README and add application icon

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Email Triage AI</title>
     <link rel="stylesheet" href="/static/styles.css" />
-    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/favicon1.ico" type="image/x-icon">
 </head>
 
 <body>
